--- a/Grotta.css
+++ b/Grotta.css
@@ -23,6 +23,10 @@ body {
   src: url("fonts/Oblik-Bold.otf");
 }
 
+.logo{
+    width: 05px;
+}
+
 .wifi {
   color: #19676b;
   font-size: 30px;
@@ -32,7 +36,7 @@ body {
 
 .text {
   font-size: 14px;
-  margin-top: 150px;
+  margin-top: 230px;
   color: aliceblue;
   width: 270px;
   text-shadow: 1px 1px #000000;
