--- a/Grotta.css
+++ b/Grotta.css
@@ -23,10 +23,6 @@ body {
   src: url("fonts/Oblik-Bold.otf");
 }
 
-.logo{
-    width: 05px;
-}
-
 .wifi {
   color: #19676b;
   font-size: 30px;
@@ -73,6 +69,11 @@ body {
 
   .wifi {
     font-size: 20px;
+  }
+
+  .text {
+    margin-top: 330px;
+    margin-bottom: 40px;
   }
 
   .btn-1 {
